--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,13 +48,13 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v3.0.0-beta-nightly
+        tag_name: nightly-release
     - name: Advance nightly tag to master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         pushd deseret-crystal
-        git tag v3.0.0-beta-nightly -f
+        git tag nightly-release -f
         git push --tags -f "https://hyperdriveguy:$GITHUB_TOKEN@github.com/hyperdriveguy/deseret-crystal.git"
         popd
     - name: Create new release
@@ -63,8 +63,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v3.0.0-beta-nightly
-        release_name: 3.0.0 beta nightly
+        tag_name: nightly-release
+        release_name: Nightly Release
         body: |
           This is the current Deseret Crystal **alpha** release. The assets all have an 8-character "commit hash" at the end to identify the exact code they're built from.
           
@@ -72,7 +72,8 @@ jobs:
           
           The **.sym** assets are "symbol files". They're useful for debugging, or for [discovering cheat codes](https://github.com/pret/pokecrystal/wiki/Discovering-GameShark-cheat-codes), although cheats are *not* officially supported and may cause bugs or crashes. (Do ***not*** ask the developers for cheat codes.)
           
-          The **.bsp** asset is a [BSP](https://github.com/aaaaaa123456789/bsp) save file patch in case you need to upgrade a save file from an older 3.0.0 beta build, using a patcher like the one for [Pokémon Prism](http://pokemonprism.com/patcher.html).
+          The **.bsp** asset is a [BSP](https://github.com/aaaaaa123456789/bsp) save file patch in case you need to upgrade a save file from an older nightly build, using a patcher like the one for [Pokémon Prism](http://pokemonprism.com/patcher.html).
+          Note that this save patch doesn't really do anything at the moment. Development is so early that it doesn't make sense to attempt to port saves yet.
           
           The **polisheddebug** assets are ROMs and symbol files with extra features to help debug the game. Do ***not*** download these to just play with; use them to help the developers diagnose and fix bugs, or create new features.
         draft: false
