--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,8 +85,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./polishedcrystal/build/polishedcrystal-3.0.0-beta.gbc
-        asset_name: polishedcrystal-3.0.0-beta-${{ env.SHORT_SHA }}.gbc
+        asset_path: ./deseret-crystal/build/polishedcrystal-3.0.0-beta.gbc
+        asset_name: deseret-crystal-alpha-${{ env.SHORT_SHA }}.gbc
         asset_content_type: application/octet-stream
     - name: Upload SYM
       id: upload-sym
@@ -95,8 +95,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./polishedcrystal/build/polishedcrystal-3.0.0-beta.sym
-        asset_name: polishedcrystal-3.0.0-beta-${{ env.SHORT_SHA }}.sym
+        asset_path: ./deseret-crystal/build/polishedcrystal-3.0.0-beta.sym
+        asset_name: deseret-crystal-alpha-${{ env.SHORT_SHA }}.sym
         asset_content_type: text/plain
     - name: Upload faithful ROM
       id: upload-faithful
@@ -105,8 +105,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./polishedcrystal/build/polishedcrystal-faithful-3.0.0-beta.gbc
-        asset_name: polishedcrystal-faithful-3.0.0-beta-${{ env.SHORT_SHA }}.gbc
+        asset_path: ./deseret-crystal/build/polishedcrystal-faithful-3.0.0-beta.gbc
+        asset_name: deseret-crystal-faithful-alpha-${{ env.SHORT_SHA }}.gbc
         asset_content_type: application/octet-stream
     - name: Upload faithful SYM
       id: upload-faithful-sym
@@ -115,8 +115,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./polishedcrystal/build/polishedcrystal-faithful-3.0.0-beta.sym
-        asset_name: polishedcrystal-faithful-3.0.0-beta-${{ env.SHORT_SHA }}.sym
+        asset_path: ./deseret-crystal/build/polishedcrystal-faithful-3.0.0-beta.sym
+        asset_name: deseret-crystal-faithful-alpha-${{ env.SHORT_SHA }}.sym
         asset_content_type: text/plain
     - name: Upload debug ROM
       id: upload-debug
@@ -125,8 +125,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./polishedcrystal/build/polisheddebug-3.0.0-beta.gbc
-        asset_name: polisheddebug-3.0.0-beta-${{ env.SHORT_SHA }}.gbc
+        asset_path: ./deseret-crystal/build/polisheddebug-3.0.0-beta.gbc
+        asset_name: deseret-crystal-debug-alpha-${{ env.SHORT_SHA }}.gbc
         asset_content_type: application/octet-stream
     - name: Upload debug SYM
       id: upload-debug-sym
@@ -135,8 +135,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./polishedcrystal/build/polisheddebug-3.0.0-beta.sym
-        asset_name: polisheddebug-3.0.0-beta-${{ env.SHORT_SHA }}.sym
+        asset_path: ./deseret-crystal/build/polisheddebug-3.0.0-beta.sym
+        asset_name: deseret-crystal-debug-alpha-${{ env.SHORT_SHA }}.sym
         asset_content_type: text/plain
     - name: Upload faithful debug ROM
       id: upload-faithful-debug
@@ -145,8 +145,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./polishedcrystal/build/polisheddebug-faithful-3.0.0-beta.gbc
-        asset_name: polisheddebug-faithful-3.0.0-beta-${{ env.SHORT_SHA }}.gbc
+        asset_path: ./deseret-crystal/build/polisheddebug-faithful-3.0.0-beta.gbc
+        asset_name: deseret-crystal-faithful-debug-alpha-${{ env.SHORT_SHA }}.gbc
         asset_content_type: application/octet-stream
     - name: Upload faithful debug SYM
       id: upload-faithful-debug-sym
@@ -155,8 +155,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./polishedcrystal/build/polisheddebug-faithful-3.0.0-beta.sym
-        asset_name: polisheddebug-faithful-3.0.0-beta-${{ env.SHORT_SHA }}.sym
+        asset_path: ./deseret-crystal/build/polisheddebug-faithful-3.0.0-beta.sym
+        asset_name: deseret-crystal-faithful-debug-alpha-${{ env.SHORT_SHA }}.sym
         asset_content_type: text/plain
     - name: Upload BSP
       id: upload-bsp
@@ -165,6 +165,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./polishedcrystal/build/polishedcrystal-savepatch-3.0.0-beta.bsp
-        asset_name: polishedcrystal-savepatch-3.0.0-beta-${{ env.SHORT_SHA }}.bsp
+        asset_path: ./deseret-crystal/build/polishedcrystal-savepatch-3.0.0-beta.bsp
+        asset_name: deseret-crystal-savepatch-alpha-${{ env.SHORT_SHA }}.bsp
         asset_content_type: application/octet-stream
